Resolves: fdo#80025 Crash with Thunderbird/Icedove address book

There's no property USEBOOKMARKS for mork/moz

(regression from 0fadbdbbdbd55cf60f9a202f1cf7b1d60517078c)

Cherry-picked from 488f31200094d7237d45545ab227014831a1f8e6

Change-Id: If81f063fad2d702c9d8b0bb4147757655cb016cf